# Projet_GPU_Radio

./: .gitignore  CMakeLists.txt  README.md  Rapport_Projet_GPU.md  assemble_results.py  build.sh  convert_satnogs.py  generate_signal.py  main.cu  plot_spectrogram.py  process_qb50_segments.sh  profile_streams.sh  run_full_pipeline.sh  signal_config.json  signal_qb50_config.json  test_seg_config.json
